src/styles.scss
/* You can add global styles to this file, and also import other style files */

/* Core CSS required for Ionic components to work properly */
@import '@ionic/angular/css/core.css';

/* Basic CSS for apps built with Ionic */
@import '@ionic/angular/css/normalize.css';
@import '@ionic/angular/css/structure.css';
@import '@ionic/angular/css/typography.css';
@import '@ionic/angular/css/display.css';

/* Optional CSS utils that can be commented out */
@import '@ionic/angular/css/padding.css';
@import '@ionic/angular/css/float-elements.css';
@import '@ionic/angular/css/text-alignment.css';
@import '@ionic/angular/css/text-transformation.css';
@import '@ionic/angular/css/flex-utils.css';

a {
    text-decoration-line: none;
}

.font-bold {
    font-weight: 700 !important;
}

.font-normal {
    font-weight: 400;
}

.italic {
    font-style: italic;
}

.text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem;
}

.text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
}

.text-danger {
    color: var(--ion-color-danger);
}

.w-auto {
    width: auto;
}

.shadow-none {
    box-shadow: none;
}

.mt-1 {
    margin-top: 0.25rem;
}

.gap-3 {
    gap: 0.75rem;
}

ion-input {
    --padding-bottom: 0 !important;
}

ion-item {
    --background: transparent;
}

ion-popover {
    --width: fit-content;
}

ion-modal {
    --width: 70vw;
    --max-width: 900px;
    --height: 65vh;
    --max-height: 90vh;
}

.reorder-enabled {
    user-select: unset;
}

ion-accordion.accordion-expanding,
ion-accordion.accordion-expanded {
    background: whitesmoke;
}

.alert-button.alert-button-role-cancel {
    color: var(--ion-color-medium);
}

.md ion-select {
    position: relative;
    top: -8px;
}

.tooltip {
    position: absolute;
    padding: 0.5rem;
    background: #313639;
    color: #f9f9f9;
    border: 0px;
    border-radius: 8px;
    pointer-events: none;
    font-size: 0.7rem;
    z-index: 1;
    opacity: 0;
}

markdown {
    line-height: 1.4;

    &.border-bottom {
        display: block;
        border-bottom: 0.5px solid var(--ion-color-step-250, #c8c7cc);
    }

    th,
    td {
        border: 1px solid var(--ion-color-step-300, #b3b3b3);
        padding: 0.4rem 0.75rem;
    }

    th {
        background: var(--ion-color-step-100, #e6e6e6);
        font-weight: 600;
    }
}

